	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.



	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.1


NEW FEATURES

    o	There is now a "Complex" S3 group generic (a side-effect of
	fixing up the corresponding S4 group generic).

    o	help("regex") will now give a (preliminary) description of the
	regular expressions used in R.  More details (including a
	description of Perl-like regular expressions) will be added to
	later releases of R.

    o   The startup message now shows the R Foundation as copyright
        holder, and includes the R ISBN number and a pointer to the new
        citation() function.

    o   The "solve" function now uses the tol argument for all non-complex
        cases.  The default tolerance for LINPACK is 1e-7, as before.
        For LAPACK it currently is .Machine$double.eps but may be made
        tighter in future versions of R.

BUG FIXES

    o	symnum(x) now behaves as documented when length(x) == 0 and uses
	lower.triangular = FALSE for logical arrays.

    o	c() now has a method for "noquote" objects and hence works as
	expected.

    o	split(1:10, c(1,2)) no longer gives a spurious warning.

    o	The "Complex" S4 group generic now works.

    o	abbreviate() doesn't get into infinite loops on input that differs
	only by leading/trailing space

    o	Added check for user interrupt in Rvprintf to allow printing to be
	interrupted.

    o	Fixed bug that would cause segfault on protect stack overflow.

    o	crossprod() on matrices with zero extents would return an